--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Ecom</title>
+  <title>Posts Cloud</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body style="background-color: rgb(128, 145, 161);">
   <app-root></app-root>
 </body>
+
 </html>
