--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="background-color: rgb(128, 145, 161);">
+<body style="background-color: rgb(161, 110, 110) !important;">
   <app-root></app-root>
 </body>
 
