--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="background-color: rgb(161, 110, 110) !important;">
+<body
+  style="background-image: url('https://media.istockphoto.com/vectors/education-icons-on-gray-background-pattern-vector-id466873090?k=6&m=466873090&s=612x612&w=0&h=XW3Uc0nAQPS8g4IXSFWPiadlfhBrzMcWuwRM1SbF_mE=');">
   <app-root></app-root>
 </body>
 
