--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Posts Cloud</title>
+  <title>AGS Market</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body
-  style="background-image: url('https://media.istockphoto.com/vectors/education-icons-on-gray-background-pattern-vector-id466873090?k=6&m=466873090&s=612x612&w=0&h=XW3Uc0nAQPS8g4IXSFWPiadlfhBrzMcWuwRM1SbF_mE=');">
+<body style="background-color: rgb(71, 71, 75);">
   <app-root></app-root>
 </body>
 
