--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="background-color: rgb(66, 66, 66);">
+<body style="background-color: black;">
   <app-root></app-root>
 </body>
 
