dropdown z-index debugged

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
 <body style="background-color: black;">
   <app-root></app-root>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 </html>
